# EIPSA

./: .gitignore  EIPSA_manuscript_extracted.md  EIPSA_supplementary_information.md  README.md  SupplementaryInformation.docx  SupplementaryTable1.xlsx  SupplementaryTable2.xlsx  SupplementaryTable3.xlsx  Table1.xlsx  TargetJournals.docx  eipsa_analysis.py  eipsa_covid.py  eipsa_figure3.py  eipsa_final_manuscript.py  eipsa_manuscript_figures.py  eipsa_polarization.py  eipsa_robustness.py  eipsa_state_capacity.py  eipsa_supplementary.py  main.py  main_manuscript_EIPSA.docx  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: EIPSA_OECD_panel_2019_2024.csv  V-Dem-CY-Full+Others-v15.csv  emdat_epidemics.xlsx  oecd_panel.csv  oecd_panel.parquet  owid-covid-data.csv  oxcgrt_economic.csv
forNatureHumanBehaivior/: Cover_Letter.docx  main_manuscript_EIPSA.docx
forPNAS/: SupplementaryInformation.docx  coi_disclosure.docx  main_manuscript_EIPSA.docx
forSSM/: Cover_Letter.docx  SupplementaryInformation.docx  main_manuscript_EIPSA.docx
manuscript/: EIPSA_manuscript.md
output/tables/: bayesian_dynamic_results.csv  bayesian_dynamic_results.xlsx  panel_fd.csv  (+19 more)
scripts/: 01_main_analysis.py  02_selection_effect.py  03_robustness_checks.py  diagnose_dropped_country.py  export_main_95hdi.py  export_si_tables_95hdi.py  final_outputs.py  fit_main_model_correct.py  fit_sensitivity_interaction.py  fit_sensitivity_lag2.py  phase1_data.py  phase2_bayesian.py  phase2_bayesian_dynamic.py  phase2_hypotheses.py  phase2_models.py  phase2_sensitivity.py  phase3_plots.py
